templates/nexus-operator_template.yaml
---
# Source: nexus-operator/templates/webhook_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: edp-nexus-operator-webhook-service
  labels:
    helm.sh/chart: nexus-operator-3.2.0
    app.kubernetes.io/name: nexus-operator
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "3.2.0"
    app.kubernetes.io/managed-by: Helm
spec:
  ports:
    - port: 443
      protocol: TCP
      targetPort: 9443
  selector:
    name: nexus-operator
---
# Source: nexus-operator/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    helm.sh/chart: nexus-operator-3.2.0
    app.kubernetes.io/name: nexus-operator
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "3.2.0"
    app.kubernetes.io/managed-by: Helm
  name: nexus-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      name: nexus-operator
  template:
    metadata:
      labels:
        name: nexus-operator
    spec:
      serviceAccountName: edp-nexus-operator
      securityContext:
        runAsNonRoot: true
      containers:
        - name: nexus-operator
          # Replace this with the built image name
          image: epamedp/nexus-operator:3.2.0
          ports:
            - containerPort: 9443
              name: webhook-server
              protocol: TCP
          volumeMounts:
            - mountPath: /tmp/k8s-webhook-server/serving-certs
              name: cert
              readOnly: true
          imagePullPolicy: "IfNotPresent"
          command:
            - /manager
          securityContext:
            allowPrivilegeEscalation: false
          resources:
            limits:
              memory: 192Mi
            requests:
              cpu: 50m
              memory: 64Mi
      volumes:
        - name: cert
          secret:
            defaultMode: 420
            secretName: edp-nexus-operator-webhook-certs
---
# Source: nexus-operator/templates/validation_webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  labels:
    helm.sh/chart: nexus-operator-3.2.0
    app.kubernetes.io/name: nexus-operator
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "3.2.0"
    app.kubernetes.io/managed-by: Helm
  name: edp-nexus-operator-validating-webhook-configuration-default
webhooks:
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: edp-nexus-operator-webhook-service
        namespace: default
        path: /validate-edp-epam-com-v1alpha1-nexusrepository
    failurePolicy: Fail
    name: vnexusrepository.kb.io
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values:
            - default
    rules:
      - apiGroups:
          - edp.epam.com
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - nexusrepositories
        scope: Namespaced
    sideEffects: None
